# Snake_game

./: CMakeLists.txt  snake_game - Shortcut.lnk
assets/Scripts/: GameHandler.cs  LevelGrid.cs
src/: Game.cpp  Game.hpp
src/core/: Config.hpp  Input.hpp  Types.hpp
src/entities/: Apple.cpp  Apple.hpp  BaseItem.cpp  BaseItem.hpp  BuffItem.cpp  BuffItem.hpp  Bullet.cpp  Bullet.hpp  Item.cpp  Item.hpp  Snake.cpp  Snake.hpp
src/grid/: Grid.cpp  Grid.hpp
src/systems/: Collision.cpp  Collision.hpp  SoundManager.cpp  SoundManager.hpp  Spawner.cpp  Spawner.hpp
src/ui/: Hud.cpp  Hud.hpp
